Fix app list animation issue for toggling overview mode

Background:
When active window exists, toggling overview mode will show a
enlarge/shrink animation instead of slide up/down animation. In this
case, app list should stay invisible during the animation.

Changes:
Only run animation when overview mode is using slide animation.
Otherwise, set the animation duration to 0 so that app list will
immediately disappear when overview mode is on and will immediately
show up after overview mode animation when overview mode is off.

Bug: 876781
Change-Id: Ifc7af8838beead1dbd1b6d70ee46eec3af19dc19
Reviewed-on: https://chromium-review.googlesource.com/1186036
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585540}
Former-commit-id: 840e6acc20b521c933fa34d527c0bdc01f6d9f04